z index of menu wrap changed to fix bug of x disapearing

--- a/src/homepage/navbar.css
+++ b/src/homepage/navbar.css
@@ -168,7 +168,7 @@ button {
         width: 3rem;
         height: 3rem;
         margin: 0 4% 0 0;
-        z-index: 1;
+        z-index: 0;
     }
 
     .logo {
